--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,11 +9,13 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">17,290</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">4</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">42,359</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">CapgeminiSelenium.maintest.AppLoginPageTest</td><td><a href="#m0">validateLoginTest</a></td><td rowspan="1">1632834034560</td><td rowspan="1">4685</td></tr><tr class="passedeven"><td><a href="#m1">validateTitleTest</a></td><td rowspan="1">1632834029273</td><td rowspan="1">10</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="4">CapgeminiSelenium.maintest.AppLoginPageTest</td><td><a href="#m0">validateLoginTest</a></td><td rowspan="1">1632918718599</td><td rowspan="1">4476</td></tr><tr class="passedeven"><td><a href="#m1">validateMultipleLogin</a></td><td rowspan="2">1632918689819</td><td rowspan="2">5173</td></tr><tr class="passedeven"><td><a href="#m2">validateMultipleLogin</a></td></tr><tr class="passedeven"><td><a href="#m3">validateTitleTest</a></td><td rowspan="1">1632918711012</td><td rowspan="1">15</td></tr></tbody>
 </table>
 <h2>Default test</h2><h3 id="m0">CapgeminiSelenium.maintest.AppLoginPageTest#validateLoginTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">CapgeminiSelenium.maintest.AppLoginPageTest#validateTitleTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">CapgeminiSelenium.maintest.AppLoginPageTest#validateMultipleLogin</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>admin</td><td>admin123</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">CapgeminiSelenium.maintest.AppLoginPageTest#validateMultipleLogin</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>test</td><td>test2</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">CapgeminiSelenium.maintest.AppLoginPageTest#validateTitleTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
