--- a/test-output/index.html
+++ b/test-output/index.html
@@ -93,7 +93,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">2 methods,   2 passed</span>
+                    <span class="method-stats">4 methods,   4 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -105,6 +105,16 @@
                       <span>
                         <img src="passed.png" width="3%"/>
                         <a href="#" panel-name="suite-Default_suite" title="CapgeminiSelenium.maintest.AppLoginPageTest" class="method navigator-link" hash-for-method="validateLoginTest">validateLoginTest</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="CapgeminiSelenium.maintest.AppLoginPageTest" class="method navigator-link" hash-for-method="validateMultipleLogin(admin, admin123)">validateMultipleLogin(admin, admin123)</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="CapgeminiSelenium.maintest.AppLoginPageTest" class="method navigator-link" hash-for-method="validateMultipleLogin(test, test2)">validateMultipleLogin(test, test2)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
@@ -139,6 +149,22 @@
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
+                  <a name="validateMultipleLogin(admin, admin123)">
+                  </a> <!-- validateMultipleLogin(admin, admin123) -->
+                  <span class="method-name">validateMultipleLogin</span>
+                  <span class="parameters">(admin, admin123)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="validateMultipleLogin(test, test2)">
+                  </a> <!-- validateMultipleLogin(test, test2) -->
+                  <span class="method-name">validateMultipleLogin</span>
+                  <span class="parameters">(test, test2)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
                   <a name="validateTitleTest">
                   </a> <!-- validateTitleTest -->
                   <span class="method-name">validateTitleTest</span>
@@ -149,7 +175,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">/private/var/folders/5h/nj22w68n52q12wq5rv_9hqmm0000gn/T/testng-eclipse--1834226242/testng-customsuite.xml</span>
+            <span class="header-content">/private/var/folders/5h/nj22w68n52q12wq5rv_9hqmm0000gn/T/testng-eclipse-1714245594/testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -198,20 +224,28 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(2);
+data.addRows(4);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'validateLoginTest')
+data.setCell(0, 1, 'validateMultipleLogin')
 data.setCell(0, 2, 'CapgeminiSelenium.maintest.AppLoginPageTest')
-data.setCell(0, 3, 4685);
+data.setCell(0, 3, 5173);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'validateTitleTest')
+data.setCell(1, 1, 'validateLoginTest')
 data.setCell(1, 2, 'CapgeminiSelenium.maintest.AppLoginPageTest')
-data.setCell(1, 3, 10);
+data.setCell(1, 3, 4476);
+data.setCell(2, 0, 2)
+data.setCell(2, 1, 'validateMultipleLogin')
+data.setCell(2, 2, 'CapgeminiSelenium.maintest.AppLoginPageTest')
+data.setCell(2, 3, 1229);
+data.setCell(3, 0, 3)
+data.setCell(3, 1, 'validateTitleTest')
+data.setCell(3, 2, 'CapgeminiSelenium.maintest.AppLoginPageTest')
+data.setCell(3, 3, 15);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 4 seconds</span>
+              <span class="suite-total-time">Total running time: 10 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -238,30 +272,62 @@ return data;
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
               <div class="chronological-class-name">CapgeminiSelenium.maintest.AppLoginPageTest</div> <!-- chronological-class-name -->
+              <div class="configuration-test before">
+                <span class="method-name">reportSetup</span>
+                <span class="method-start">0 ms</span>
+              </div> <!-- configuration-test before -->
               <div class="configuration-method before">
                 <span class="method-name">browserSetup</span>
-                <span class="method-start">0 ms</span>
+                <span class="method-start">652 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">validateMultipleLogin(admin, admin123)</span>
+                <span class="method-start">8718 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">closeBrowserSetup</span>
+                <span class="method-start">13894 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="configuration-method before">
+                <span class="method-name">browserSetup</span>
+                <span class="method-start">13987 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">validateMultipleLogin(test, test2)</span>
+                <span class="method-start">21518 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">closeBrowserSetup</span>
+                <span class="method-start">22748 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="configuration-method before">
+                <span class="method-name">browserSetup</span>
+                <span class="method-start">22837 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">validateTitleTest</span>
-                <span class="method-start">7290 ms</span>
+                <span class="method-start">29911 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">closeBrowserSetup</span>
-                <span class="method-start">7302 ms</span>
+                <span class="method-start">29926 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">browserSetup</span>
-                <span class="method-start">7304 ms</span>
+                <span class="method-start">30014 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">validateLoginTest</span>
-                <span class="method-start">12577 ms</span>
+                <span class="method-start">37498 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">closeBrowserSetup</span>
-                <span class="method-start">17262 ms</span>
+                <span class="method-start">41975 ms</span>
               </div> <!-- configuration-method after -->
+              <div class="configuration-test after">
+                <span class="method-name">closeReportSetup</span>
+                <span class="method-start">42070 ms</span>
+              </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
       </div> <!-- main-panel-root -->
