--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,16 +1,32 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="d18979">  <td>21/09/28 18:30:29</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AppLoginPageTest.browserSetup()[pri:0, instance:CapgeminiSelenium.maintest.AppLoginPageTest@57af006c]">&gt;&gt;browserSetup</td> 
-<td>&nbsp;</td>  <td>main@1702143276</td>   <td></td> </tr>
-<tr bgcolor="d18979">  <td>21/09/28 18:30:29</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AppLoginPageTest.browserSetup()[pri:0, instance:CapgeminiSelenium.maintest.AppLoginPageTest@57af006c]">&gt;&gt;browserSetup</td> 
-<td>&nbsp;</td>  <td>main@1702143276</td>   <td></td> </tr>
-<tr bgcolor="d18979">  <td>21/09/28 18:30:39</td>   <td>9958</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AppLoginPageTest.closeBrowserSetup()[pri:0, instance:CapgeminiSelenium.maintest.AppLoginPageTest@57af006c]">&lt;&lt;closeBrowserSetup</td> 
-<td>&nbsp;</td>  <td>main@1702143276</td>   <td></td> </tr>
-<tr bgcolor="d18979">  <td>21/09/28 18:30:39</td>   <td>9958</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AppLoginPageTest.closeBrowserSetup()[pri:0, instance:CapgeminiSelenium.maintest.AppLoginPageTest@57af006c]">&lt;&lt;closeBrowserSetup</td> 
-<td>&nbsp;</td>  <td>main@1702143276</td>   <td></td> </tr>
-<tr bgcolor="d18979">  <td>21/09/28 18:30:34</td>   <td>5273</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AppLoginPageTest.validateLoginTest()[pri:2, instance:CapgeminiSelenium.maintest.AppLoginPageTest@57af006c]">validateLoginTest</td> 
-  <td>main@1702143276</td>   <td></td> </tr>
-<tr bgcolor="d18979">  <td>21/09/28 18:30:29</td>   <td>-14</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AppLoginPageTest.validateTitleTest()[pri:1, instance:CapgeminiSelenium.maintest.AppLoginPageTest@57af006c]">validateTitleTest</td> 
-  <td>main@1702143276</td>   <td></td> </tr>
+<tr bgcolor="94b0ad">  <td>21/09/29 18:01:51</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AppLoginPageTest.browserSetup()[pri:0, instance:CapgeminiSelenium.maintest.AppLoginPageTest@58d75e99]">&gt;&gt;browserSetup</td> 
+<td>&nbsp;</td>  <td>main@1813666644</td>   <td></td> </tr>
+<tr bgcolor="94b0ad">  <td>21/09/29 18:01:51</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AppLoginPageTest.browserSetup()[pri:0, instance:CapgeminiSelenium.maintest.AppLoginPageTest@58d75e99]">&gt;&gt;browserSetup</td> 
+<td>&nbsp;</td>  <td>main@1813666644</td>   <td></td> </tr>
+<tr bgcolor="94b0ad">  <td>21/09/29 18:01:51</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AppLoginPageTest.browserSetup()[pri:0, instance:CapgeminiSelenium.maintest.AppLoginPageTest@58d75e99]">&gt;&gt;browserSetup</td> 
+<td>&nbsp;</td>  <td>main@1813666644</td>   <td></td> </tr>
+<tr bgcolor="94b0ad">  <td>21/09/29 18:01:51</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AppLoginPageTest.browserSetup()[pri:0, instance:CapgeminiSelenium.maintest.AppLoginPageTest@58d75e99]">&gt;&gt;browserSetup</td> 
+<td>&nbsp;</td>  <td>main@1813666644</td>   <td></td> </tr>
+<tr bgcolor="94b0ad">  <td>21/09/29 18:02:03</td>   <td>11961</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AppLoginPageTest.closeBrowserSetup()[pri:0, instance:CapgeminiSelenium.maintest.AppLoginPageTest@58d75e99]">&lt;&lt;closeBrowserSetup</td> 
+<td>&nbsp;</td>  <td>main@1813666644</td>   <td></td> </tr>
+<tr bgcolor="94b0ad">  <td>21/09/29 18:02:03</td>   <td>11961</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AppLoginPageTest.closeBrowserSetup()[pri:0, instance:CapgeminiSelenium.maintest.AppLoginPageTest@58d75e99]">&lt;&lt;closeBrowserSetup</td> 
+<td>&nbsp;</td>  <td>main@1813666644</td>   <td></td> </tr>
+<tr bgcolor="94b0ad">  <td>21/09/29 18:02:03</td>   <td>11961</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AppLoginPageTest.closeBrowserSetup()[pri:0, instance:CapgeminiSelenium.maintest.AppLoginPageTest@58d75e99]">&lt;&lt;closeBrowserSetup</td> 
+<td>&nbsp;</td>  <td>main@1813666644</td>   <td></td> </tr>
+<tr bgcolor="94b0ad">  <td>21/09/29 18:02:03</td>   <td>11961</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AppLoginPageTest.closeBrowserSetup()[pri:0, instance:CapgeminiSelenium.maintest.AppLoginPageTest@58d75e99]">&lt;&lt;closeBrowserSetup</td> 
+<td>&nbsp;</td>  <td>main@1813666644</td>   <td></td> </tr>
+<tr bgcolor="94b0ad">  <td>21/09/29 18:02:03</td>   <td>12056</td> <td>&nbsp;</td><td title="&lt;&lt;AppLoginPageTest.closeReportSetup()[pri:0, instance:CapgeminiSelenium.maintest.AppLoginPageTest@58d75e99]">&lt;&lt;closeReportSetup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1813666644</td>   <td></td> </tr>
+<tr bgcolor="94b0ad">  <td>21/09/29 18:01:21</td>   <td>-30010</td> <td>&nbsp;</td><td title="&gt;&gt;AppLoginPageTest.reportSetup()[pri:0, instance:CapgeminiSelenium.maintest.AppLoginPageTest@58d75e99]">&gt;&gt;reportSetup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1813666644</td>   <td></td> </tr>
+<tr bgcolor="94b0ad">  <td>21/09/29 18:01:58</td>   <td>7484</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AppLoginPageTest.validateLoginTest()[pri:2, instance:CapgeminiSelenium.maintest.AppLoginPageTest@58d75e99]">validateLoginTest</td> 
+  <td>main@1813666644</td>   <td></td> </tr>
+<tr bgcolor="94b0ad">  <td>21/09/29 18:01:42</td>   <td>-8496</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AppLoginPageTest.validateMultipleLogin(java.lang.String,java.lang.String)[pri:0, instance:CapgeminiSelenium.maintest.AppLoginPageTest@58d75e99]">validateMultipleLogin</td> 
+  <td>main@1813666644</td>   <td></td> </tr>
+<tr bgcolor="94b0ad">  <td>21/09/29 18:01:42</td>   <td>-8496</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AppLoginPageTest.validateMultipleLogin(java.lang.String,java.lang.String)[pri:0, instance:CapgeminiSelenium.maintest.AppLoginPageTest@58d75e99]">validateMultipleLogin</td> 
+  <td>main@1813666644</td>   <td></td> </tr>
+<tr bgcolor="94b0ad">  <td>21/09/29 18:01:51</td>   <td>-103</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AppLoginPageTest.validateTitleTest()[pri:1, instance:CapgeminiSelenium.maintest.AppLoginPageTest@58d75e99]">validateTitleTest</td> 
+  <td>main@1813666644</td>   <td></td> </tr>
 </table>
